fix intro text alignment and map height

--- a/style.css
+++ b/style.css
@@ -74,8 +74,13 @@ a:hover {
   pointer-events: none;
 }
 
-.text-justify {
-  text-align: justify;
+.text-lg-justify {
+  text-align: center;
+}
+@media (min-width: 992px) {
+  .text-lg-justify {
+    text-align: justify;
+  }
 }
 
 .hero .white-blob {
@@ -103,6 +108,8 @@ a:hover {
 .map img {
   object-fit: none;
   object-position: center;
+  width: 100%;
+  height: 600px;
 }
 
 .signatures, .map {
